@@ -1,0 +1,21 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+	<Name>
+		Test support for attribute declaration with no type (per schema) where
+		the parent comply type is part of a hierarchy
+	</Name>
+	<Author>Werner Guttmann</Author>
+	<Comment>
+		Test that attribute definition with not type (per schema), but type definition 
+		given in binding file works correctly.
+	</Comment>
+	<Category>basic capability</Category>
+	<SourceGeneratorTest>
+		<Schema>test.xsd</Schema>
+		<Root_Object random="false" dump="true">Parameter</Root_Object>
+		<UnitTestCase>
+			<Name>Test Generation</Name>
+			<Input>input.xml</Input>
+		</UnitTestCase>
+	</SourceGeneratorTest>
+</TestDescriptor>
